# neudev-cli

./: .coveragerc  .dockerignore  .env.lightning.example  .gitignore  ANALYSIS_AND_FIXES.md  CLI_AGENT_LOOP_FIX.md  Dockerfile  GIT_COMMIT_INSTRUCTIONS.md  LATEST_FIXES_SUMMARY.md  LICENSE  LOCAL_INSTALL_FIX.md  MANIFEST.in  README.md  TEST_SERVER_FIX.md  V3_FIXES_SUMMARY.md  git_commit.py  git_commit_push.bat  package.json  pyproject.toml  pytest.ini  requirements.txt  setup.py
docs/: ADVANCED_TOOLS_VERIFICATION.md  AGENT_INTELLIGENCE_IMPLEMENTATION.md  CRITICAL_FIXES.md  DEPLOYMENT_GUIDE.md  GOOGLE_COLAB_DEPLOYMENT.md  IMPLEMENTATION_VERIFICATION.md  IMPROVEMENTS.md  NEW_TOOLS_IMPLEMENTATION.md  VERIFICATION_REPORT.md  hybrid-runtime-checklist.md  hybrid-runtime-plan.md  lightning-deployment.md  release.md
neudev/: __init__.py  __main__.py  agent.py  ast_parser.py  audit.py  cli.py  cli_ui_enhanced.py  config.py  context.py  context_summarizer.py  health_check.py  hosted_llm.py  llm.py  model_routing.py  observability.py  path_security.py  permissions.py  project_memory.py  remote_api.py  security.py  server.py  session.py  tool_call_parser.py
neudev.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
scripts/: colab_start_server.sh  deploy_to_lightning.sh  lightning_bootstrap.sh  lightning_entrypoint.sh  lightning_quick_tunnel.sh  npm-postinstall.js  npm-uninstall.js  quick_fix_deploy.sh  update_server.sh
tests/: test_advanced_tools.py  test_agent.py  test_cli.py  test_context.py  test_hybrid_runtime.py  test_integration.py  (+8 more)
(+39 files in other folders)
